incident-chart/templates/main-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incident-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.incident.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: incident.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
